--- a/Web-Application/templates/dashboard/search.html
+++ b/Web-Application/templates/dashboard/search.html
@@ -208,22 +208,8 @@
 
 				var x = sessionStorage.getItem('id');
 				document.getElementById("id").value = x;
-				
-				// Friend Image
-				// var image_profile_pic = new Image();
-				// var friend_id = sessionStorage.getItem('friend_id');
-				// var friend_pic_src = "http://10.130.10.35:8080/DBProject/UploadPhoto?id="+friend_id;
-				// image_profile_pic.src = friend_pic_src;
-				// image_profile_pic.onload = function()
-				// {
-				// 	document.getElementById("profile_pic").src=image_profile_pic.src;
-				// }
-				// image_profile_pic.onerror = function()
-				// {
-				// 	document.getElementById("profile_pic").src="images/user.jpg";
-				// }
 
-				///////////////Advanced Search for genre purpose////////////////////
+				/////////////// Advanced Search for genre purpose ////////////////////
 
 				$.get("http://10.130.10.35:8080/DBProject/AdvancedSearch", {id : sessionStorage.getItem('id'), type : "genre"},function(data,status) {
 
@@ -244,26 +230,25 @@
 				console.log(src);
 				$("#searchgenre").autocomplete({
 					source: src,
-				select: function (e, ui) {
-					// alert(ui);
-					console.log(ui["item"]["value"]);
-					// var selectedItem = ui["item"]["value"];
-					// var items = selectedItem.split(",");
-					// // console.log(items[0]);
-					// if(items[0]=="reader"){
-					// 	openFriendPageById(items[1]);
-					// }
-					// else if(items[0]=="book"){
-					// 	openBookPage(items[1]);
-					// }
-					// else{	
-					// }
-				}
+					select: function (e, ui) {
+
+						console.log(ui["item"]["value"]);
+						var selectedGenre = ui["item"]["value"];
+
+						// if(items[0]=="reader"){
+						// 	openFriendPageById(items[1]);
+						// }
+						// else if(items[0]=="book"){
+						// 	openBookPage(items[1]);
+						// }
+						// else{	
+						// }
+					}
 				});
 
 			});
 
-				///////////////Advanced Search for author purpose////////////////////
+				/////////////// Advanced Search for author purpose ////////////////////
 
 				$.get("http://10.130.10.35:8080/DBProject/AdvancedSearch", {id : sessionStorage.getItem('id'), type : "author"},function(data,status) {
 
@@ -286,50 +271,24 @@
 				console.log(src);
 				$("#searchauthor").autocomplete({
 					source: src,
-				select: function (e, ui) {
-					// alert(ui);
-					console.log(ui["item"]["value"]);
-					// var selectedItem = ui["item"]["value"];
-					// var items = selectedItem.split(",");
-					// // console.log(items[0]);
-					// if(items[0]=="reader"){
-					// 	openFriendPageById(items[1]);
-					// }
-					// else if(items[0]=="book"){
-					// 	openBookPage(items[1]);
-					// }
-					// else{	
-					// }
-				}
+					select: function (e, ui) {
+
+						console.log(ui["item"]["value"]);
+						// var selectedItem = ui["item"]["value"];
+						// var items = selectedItem.split(",");
+						// // console.log(items[0]);
+						// if(items[0]=="reader"){
+						// 	openFriendPageById(items[1]);
+						// }
+						// else if(items[0]=="book"){
+						// 	openBookPage(items[1]);
+						// }
+						// else{	
+						// }
+					}
 				});
 
 			});
-
-
-
-				////////////// FOLLOW BUTTON ///////////////////
-
-				// $.get("http://10.130.10.35:8080/DBProject/FollowBit", {id : sessionStorage.getItem('id'), friend_id : sessionStorage.getItem('friend_id')}, function(data,status) {
-
-				// 	console.log(data);
-
-				// 	if (data["status"] == true) {
-
-				// 		var follow_btn = document.getElementById('cover-follow');
-						
-				// 		if (data["isfriend"] == "1") {
-				// 			follow_btn.innerHTML = "unfollow";
-				// 		}
-				// 		else {
-				// 			follow_btn.innerHTML = "follow";
-				// 		}
-
-				// 	}
-				// 	else {
-				// 		alert("Some internal error. Couldn't retrieve info");
-				// 	}
-
-				// });
 
 
 				////////////// SEARCH BAR AT TOP ///////////////
@@ -392,124 +351,6 @@
 					});
 
 				});
-				
-				// $('#image_id').click(function(){
-				//     $('input[type=file]').click();
-				// });
-				// $('#upload_photo').click(function(){
-				//    // console.log($('#photo').val());
-				//    window.location.href = "upload.html";
-				//    // window.open('upload.html','Upload Photo','menubar=0, toolbar=0,location=0, directories=0, status=0,crollbars=yes,width=650,height=500');
-				//  });
-
-				// Loading followers, followees, books, name and intro
-				// jQuery.ajaxSetup({async:false});
-				// $.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : sessionStorage.getItem('friend_id'), type : "reader"},function(data,status) {
-
-				// 	console.log('Entered GetDetails');
-					
-				// 	// Variables defined
-				// 	var name;
-				// 	var intro;
-				// 	var follower_list;
-				// 	var followee_list;
-
-				// 	// DOM tree variables
-				// 	var follower_list_display = document.getElementById('follower-list_outer');
-				// 	var follower_list_items = follower_list_display.childNodes;
-				// 	var followee_list_display = document.getElementById('followee-list_outer');
-				// 	var followee_list_items = followee_list_display.childNodes;
-					
-				// 	if (data["status"] == true) {
-
-				// 		// Get info from servlet
-				// 		name = data["name"];
-				// 		intro = data["intro"];
-
-				// 		// Extract followers and update
-				// 		follower_list = data["follower"];
-				// 		var f1 = 0;
-				// 		for (var follower in follower_list) {
-				// 			// console.log(follower_list[follower]);
-							
-				// 			while (follower_list_items[f1].nodeType != 1) {
-				// 				f1 += 1;
-				// 			}
-							
-				// 			follower_list_items[f1].innerHTML = "<p class=\"follower-list_name\"><a onclick='openFriendPage(this);'>" + follower_list[follower] +"</a></p>";
-				// 			f1 += 1;
-				// 		}
-
-				// 		// Extract followees and update
-				// 		followee_list = data["followee"];
-				// 		var f2 = 0;
-				// 		for (var followee in followee_list) {
-				// 			// console.log(followee_list[followee]);
-							
-				// 			while (followee_list_items[f2].nodeType != 1) {
-				// 				f2 += 1;
-				// 			}
-							
-				// 			followee_list_items[f2].innerHTML = "<p class=\"followee-list_name\"><a onclick='openFriendPage(this);'>" + followee_list[followee] +"</a></p>";
-				// 			f2 += 1;
-				// 		}
-
-				// 		// Extract reading books. (Servlet returns only book ids)
-				// 		// Now, using book_id, get the details of the book
-				// 		book_list = data["books"];
-				// 		var b1 = 1;
-				// 		for (var book_id in book_list) {
-				// 			console.log(book_list[book_id]);
-
-				// 			$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : book_list[book_id], type : "book"},function(data,status) {
-
-				// 				// console.log(data);
-				// 				if (data["status"] == true) {
-
-				// 					var book_name = data["Name"];
-				// 					var book_author = data["Author"];
-
-				// 					var book_div_id = "book-search" + b1;
-				// 					var book_div = document.getElementById(book_div_id);
-
-				// 					book_div.getElementsByTagName('h5')[0].innerHTML = book_name;
-				// 					book_div.getElementsByTagName('h6')[0].innerHTML = book_author;
-
-				// 					// Loading the images
-				// 					var image = new Image();
-				// 					var pic_src = "http://10.130.10.35:8080/DBProject/UploadBookPhoto?id="+book_list[book_id];
-				// 					image.src= pic_src;
-				// 					image.onload = function(){
-				// 						book_div.getElementsByTagName('img')[0].src=image.src;
-				// 					}
-				// 					image.onerror = function()
-				// 					{
-				// 						book_div.getElementsByTagName('img')[0].src="images/Book.gif";
-				// 					}
-
-
-				// 				}
-				// 				else {
-				// 					alert("Can't retrieve book details");
-				// 				}
-
-
-				// 				b1 += 1;
-
-				// 			});
-
-				// 		}
-
-				// 		// Update remaining info in page
-				// 		document.getElementById("cover-name").innerHTML = name;
-				// 		document.getElementById("cover-intro").innerHTML = intro;
-						
-					// }
-					// else {
-					// 	alert("Can't retrieve details");
-					// }
-
-				// });
 			
 			}
 		});
