--- a/Web-Application/templates/dashboard/friend.html
+++ b/Web-Application/templates/dashboard/friend.html
@@ -369,6 +369,8 @@
 					var follower_list_items = follower_list_display.childNodes;
 					var followee_list_display = document.getElementById('followee-list_outer');
 					var followee_list_items = followee_list_display.childNodes;
+					var donereading_list_display = document.getElementById('donereading-list_outer');
+					var donereading_list_items = donereading_list_display.childNodes;
 					
 					if (data["status"] == true) {
 
