--- a/Web-Application/templates/dashboard/friend.html
+++ b/Web-Application/templates/dashboard/friend.html
@@ -384,12 +384,26 @@
 						for (var follower in follower_list) {
 							// console.log(follower_list[follower]);
 							
+							// Get details of this particular reader
+							$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : follower_list[follower], type : "reader"},function(data,status) {
+
+								// console.log(data);
+								if (data["status"] == true) {
+									follower_name = data["name"];
+								}
+								else {
+									alert("Can't retrieve book details");
+								}
+
+							});
+
 							while (follower_list_items[f1].nodeType != 1) {
 								f1 += 1;
 							}
-							
-							follower_list_items[f1].innerHTML = "<p class=\"follower-list_name\"><a onclick='openFriendPage(this);'>" + follower_list[follower] +"</a></p>";
+
+							follower_list_items[f1].innerHTML = "<p class=\"follower-list_name\"><a onclick=\"openFriendPageById('" + follower_list[follower] +"');\">" + follower_name +"</a></p>";
 							f1 += 1;
+
 						}
 
 						// Extract followees and update
@@ -398,12 +412,26 @@
 						for (var followee in followee_list) {
 							// console.log(followee_list[followee]);
 							
+							// Get details of this particular reader
+							$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : followee_list[followee], type : "reader"},function(data,status) {
+
+								// console.log(data);
+								if (data["status"] == true) {
+									followee_name = data["name"];
+								}
+								else {
+									alert("Can't retrieve book details");
+								}
+
+							});
+
 							while (followee_list_items[f2].nodeType != 1) {
 								f2 += 1;
 							}
-							
-							followee_list_items[f2].innerHTML = "<p class=\"followee-list_name\"><a onclick='openFriendPage(this);'>" + followee_list[followee] +"</a></p>";
+
+							followee_list_items[f2].innerHTML = "<p class=\"followee-list_name\"><a onclick=\"openFriendPageById('" + followee_list[followee] +"');\">" + followee_name +"</a></p>";
 							f2 += 1;
+
 						}
 
 						// Extract already read books. (Servlet returns only book ids)
@@ -431,7 +459,7 @@
 								b2 += 1;
 							}
 
-							donereading_list_items[b2].innerHTML = "<p class=\"followee-list_name\"><a onclick='openBookPage(" + donereading_list[read_book_id] +");'>" + read_book_name +"</a></p>";
+							donereading_list_items[b2].innerHTML = "<p class=\"followee-list_name\"><a onclick=\"openBookPage('" + donereading_list[read_book_id] +"');\">" + read_book_name +"</a></p>";
 							b2 += 1;
 						}
 
@@ -453,7 +481,7 @@
 									var book_div_id = "book-suggest" + b1;
 									var book_div = document.getElementById(book_div_id);
 
-									book_div.getElementsByTagName('h5')[0].innerHTML = "<a onclick='openBookPage("+book_list[book_id]+");'>" + book_name +"</a>";
+									book_div.getElementsByTagName('h5')[0].innerHTML = "<a onclick=\"openBookPage('"+book_list[book_id]+"');\">" + book_name +"</a>";
 									book_div.getElementsByTagName('h6')[0].innerHTML = book_author;
 
 									// Loading the images
