--- a/Web-Application/templates/dashboard/friend.html
+++ b/Web-Application/templates/dashboard/friend.html
@@ -21,7 +21,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>HOME</title>
+	<title>FRIEND</title>
 
 	<!-- Add to homescreen for Chrome on Android -->
 	<meta name="mobile-web-app-capable" content="yes">
@@ -213,6 +213,7 @@
 				// User Image
 				var image = new Image();
 				var user_id = sessionStorage.getItem('id');
+				document.getElementById("namespace").innerHTML = sessionStorage.getItem("username");
 				var user_pic_src = "http://10.130.10.35:8080/DBProject/UploadPhoto?id="+user_id;
 				image.src = user_pic_src;
 				image.onload = function()
@@ -532,7 +533,7 @@
 	<div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
 		<header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
 			<div class="mdl-layout__header-row">
-				<span class="mdl-layout-title">Home</span>
+				<span class="mdl-layout-title">Friend</span>
 				<div class="mdl-layout-spacer"></div>
 				<div class="mdl-textfield mdl-js-textfield mdl-textfield--expandable">
 					<label class="mdl-button mdl-js-button mdl-button--icon" for="search">
@@ -560,9 +561,9 @@
 			<header class="demo-drawer-header">
 				<img id="image_id" class="demo-avatar" src="images/user.jpg">
 				<div class="demo-avatar-dropdown">
-					<span>hello@example.com</span>
+					<span id="namespace">hello@example.com</span>
 					<div class="mdl-layout-spacer"></div>
-					<button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+					<!-- <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
 						<i class="material-icons" role="presentation">arrow_drop_down</i>
 						<span class="visuallyhidden">Accounts</span>
 					</button>
@@ -570,12 +571,13 @@
 						<li class="mdl-menu__item">hello@example.com</li>
 						<li class="mdl-menu__item">info@example.com</li>
 						<li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
-					</ul>
+					</ul> -->
 				</div>
 			</header>
 			<nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
 				<a class="mdl-navigation__link" href="Home.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
 				<a class="mdl-navigation__link" href="../LoginRegistrationForm/edit-details.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">edit</i>Edit your details</a>
+				<a class="mdl-navigation__link" href="search.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">search</i>Advanced Search</a>
 				<a class="mdl-navigation__link" id="upload_photo"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">edit</i>Upload Photo</a>
 				<a class="mdl-navigation__link" id="navlogout"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Logout</a>
 				<!-- <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
