--- a/Web-Application/templates/dashboard/search.html
+++ b/Web-Application/templates/dashboard/search.html
@@ -155,6 +155,7 @@
 				// User Image
 				var image = new Image();
 				var user_id = sessionStorage.getItem('id');
+				document.getElementById("namespace").innerHTML = sessionStorage.getItem("username");
 				var user_pic_src = "http://10.130.10.35:8080/DBProject/UploadPhoto?id="+user_id;
 				image.src = user_pic_src;
 				image.onload = function()
@@ -352,9 +353,9 @@
 			<header class="demo-drawer-header">
 				<img id="image_id" class="demo-avatar" src="images/user.jpg">
 				<div class="demo-avatar-dropdown">
-					<span>hello@example.com</span>
+					<span id="namespace">hello@example.com</span>
 					<div class="mdl-layout-spacer"></div>
-					<button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
+					<!-- <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
 						<i class="material-icons" role="presentation">arrow_drop_down</i>
 						<span class="visuallyhidden">Accounts</span>
 					</button>
@@ -362,12 +363,13 @@
 						<li class="mdl-menu__item">hello@example.com</li>
 						<li class="mdl-menu__item">info@example.com</li>
 						<li class="mdl-menu__item"><i class="material-icons">add</i>Add another account...</li>
-					</ul>
+					</ul> -->
 				</div>
 			</header>
 			<nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
 				<a class="mdl-navigation__link" href="Home.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
 				<a class="mdl-navigation__link" href="../LoginRegistrationForm/edit-details.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">edit</i>Edit your details</a>
+				<a class="mdl-navigation__link" href="search.html"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">search</i>Advanced Search</a>
 				<a class="mdl-navigation__link" id="upload_photo"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">edit</i>Upload Photo</a>
 				<a class="mdl-navigation__link" id="navlogout"><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Logout</a>
 				<!-- <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">delete</i>Trash</a>
