--- a/Web-Application/templates/dashboard/search.html
+++ b/Web-Application/templates/dashboard/search.html
@@ -121,6 +121,14 @@
 			
 		}
 
+		// Called when book name is clicked
+		function openBookPage(obj)
+		{
+			console.log(obj);
+			sessionStorage.setItem('book_id', obj);
+			window.location.href = "Book.html";
+		}
+
 		function comeback()
 		{
 			form1 = document.getElementById('form1');
@@ -196,14 +204,78 @@
 						console.log(ui["item"]["value"]);
 						var selectedGenre = ui["item"]["value"];
 
-						// if(items[0]=="reader"){
-						// 	openFriendPageById(items[1]);
-						// }
-						// else if(items[0]=="book"){
-						// 	openBookPage(items[1]);
-						// }
-						// else{	
-						// }
+						jQuery.ajaxSetup({async:false});
+						$.get("http://10.130.10.35:8080/DBProject/SearchReturnDetails", {type : "genre", arg : selectedGenre},function(data,status) {
+							console.log(data);
+
+							if (data["status"] == true) {
+
+								search_result = data["result"];
+
+								var b2 = 1;
+								for (var result_id in search_result) {
+									// console.log(donereading_list[read_book_id]);
+									
+									// Get details of this particular book
+									$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : search_result[result_id], type : "book"},function(data,status) {
+
+										// console.log(data);
+										if (data["status"] == true) {
+
+											var book_name = data["Name"];
+											var book_author = data["Author"];
+
+											var book_div_id = "book-search_g" + b2;
+											var book_div = document.getElementById(book_div_id);
+
+											book_div.getElementsByTagName('h5')[0].innerHTML = "<a onclick=\"openBookPage('"+ search_result[result_id] +"');\">" + book_name +"</a>";
+											book_div.getElementsByTagName('h6')[0].innerHTML = book_author;
+
+											// Loading the images
+											var image = new Image();
+											var pic_src = "http://10.130.10.35:8080/DBProject/UploadBookPhoto?id=" + search_result[result_id];
+											image.src= pic_src;
+											image.onload = function(){
+												book_div.getElementsByTagName('img')[0].src=image.src;
+											}
+											image.onerror = function()
+											{
+												book_div.getElementsByTagName('img')[0].src="images/Book.gif";
+											}
+
+										}
+										else {
+											alert("Can't retrieve book details");
+										}
+
+
+										b2 += 1;
+
+									});
+									
+								}
+
+								// Clear remaining books
+								while (b2 < 4) {
+
+									var book_div_id = "book-search_g" + b2;
+									var book_div = document.getElementById(book_div_id);
+
+									book_div.getElementsByTagName('h5')[0].innerHTML = "";
+									book_div.getElementsByTagName('h6')[0].innerHTML = "";
+									book_div.getElementsByTagName('img')[0].src = "images/Book.gif";
+
+									b2 += 1;
+								}
+
+
+							}
+							else {
+								alert("Some internal retrieval error.");
+							}
+
+						});
+
 					}
 				});
 
@@ -219,33 +291,96 @@
 
 					var ss = element.split(",");
 
-					var temp = element;
-					
 					var temp3 = ss[1];
-					
 
-					var obj = {label:temp3,value: temp};
+					var obj = {label:temp3,value: temp3};
 					src.push(obj);
 					// src.push(temp);
 
 				});
+
+
 				console.log(src);
 				$("#searchauthor").autocomplete({
 					source: src,
 					select: function (e, ui) {
 
 						console.log(ui["item"]["value"]);
-						// var selectedItem = ui["item"]["value"];
-						// var items = selectedItem.split(",");
-						// // console.log(items[0]);
-						// if(items[0]=="reader"){
-						// 	openFriendPageById(items[1]);
-						// }
-						// else if(items[0]=="book"){
-						// 	openBookPage(items[1]);
-						// }
-						// else{	
-						// }
+
+						var selectedAuthor = ui["item"]["value"];
+
+						jQuery.ajaxSetup({async:false});
+						$.get("http://10.130.10.35:8080/DBProject/SearchReturnDetails", {type : "author", arg : selectedAuthor},function(data,status) {
+							console.log(data);
+
+							if (data["status"] == true) {
+
+								search_result = data["result"];
+
+								var b1 = 1;
+								for (var result_id in search_result) {
+									// console.log(donereading_list[read_book_id]);
+									
+									// Get details of this particular book
+									$.get("http://10.130.10.35:8080/DBProject/GetDetails", {id : search_result[result_id], type : "book"},function(data,status) {
+
+										// console.log(data);
+										if (data["status"] == true) {
+
+											var book_name = data["Name"];
+											var book_author = data["Author"];
+
+											var book_div_id = "book-search_a" + b1;
+											var book_div = document.getElementById(book_div_id);
+
+											book_div.getElementsByTagName('h5')[0].innerHTML = "<a onclick=\"openBookPage('"+ search_result[result_id] +"');\">" + book_name +"</a>";
+											book_div.getElementsByTagName('h6')[0].innerHTML = book_author;
+
+											// Loading the images
+											var image = new Image();
+											var pic_src = "http://10.130.10.35:8080/DBProject/UploadBookPhoto?id=" + search_result[result_id];
+											image.src= pic_src;
+											image.onload = function(){
+												book_div.getElementsByTagName('img')[0].src=image.src;
+											}
+											image.onerror = function()
+											{
+												book_div.getElementsByTagName('img')[0].src="images/Book.gif";
+											}
+
+										}
+										else {
+											alert("Can't retrieve book details");
+										}
+
+
+										b1 += 1;
+
+									});
+									
+								}
+								
+								// Clear remaining books
+								while (b1 < 4) {
+
+									var book_div_id = "book-search_a" + b1;
+									var book_div = document.getElementById(book_div_id);
+
+									book_div.getElementsByTagName('h5')[0].innerHTML = "";
+									book_div.getElementsByTagName('h6')[0].innerHTML = "";
+									book_div.getElementsByTagName('img')[0].src = "images/Book.gif";
+
+									b1 += 1;
+								}
+
+
+							}
+							else {
+								alert("Some internal retrieval error.");
+							}
+
+						});
+
 					}
 				});
 
@@ -429,7 +564,7 @@
 						<!-- List of books -->
 						<div class="booklist-search mdl-grid">
 
-							<div class="book-search mdl-cell mdl-cell-4-col" id="book-search1">
+							<div class="book-search mdl-cell mdl-cell-4-col" id="book-search_g1">
 								<img src="images/Book.gif" width="100%">
 								<h5></h5>
 								<h6></h6>
@@ -439,7 +574,7 @@
 								</div>
 							</div>
 
-							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search2">
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search_g2">
 								<img src="images/Book.gif" width="100%">  
 								<h5></h5>
 								<h6></h6>
@@ -449,7 +584,7 @@
 								</div>
 							</div>
 
-							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search3">
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search_g3">
 								<img src="images/Book.gif" width="100%">  
 								<h5></h5>
 								<h6></h6>
@@ -478,7 +613,7 @@
 						<!-- List of books -->
 						<div class="booklist-search mdl-grid">
 
-							<div class="book-search mdl-cell mdl-cell-4-col" id="book-search1">
+							<div class="book-search mdl-cell mdl-cell-4-col" id="book-search_a1">
 								<img src="images/Book.gif" width="100%">
 								<h5></h5>
 								<h6></h6>
@@ -488,7 +623,7 @@
 								</div>
 							</div>
 
-							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search2">
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search_a2">
 								<img src="images/Book.gif" width="100%">  
 								<h5></h5>
 								<h6></h6>
@@ -498,7 +633,7 @@
 								</div>
 							</div>
 
-							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search3">
+							<div class="book-search mdl-cell mdl-cell--4-col" id="book-search_a3">
 								<img src="images/Book.gif" width="100%">  
 								<h5></h5>
 								<h6></h6>
