--- a/Web-Application/templates/dashboard/Book.html
+++ b/Web-Application/templates/dashboard/Book.html
@@ -1165,6 +1165,7 @@
 
 	// When the user clicks on <span> (x), close the modal
 	span.onclick = function() {
+		console.log("dasd");
 		rateBookModal.style.display = "none";
 	}
 
@@ -1179,7 +1180,7 @@
 
 	// When the user clicks anywhere outside of the modal, close it
 	window.onclick = function(event) {
-		if (event.target == modal) {
+		if (event.target == rateBookModal) {
 			rateBookModal.style.display = "none";
 		}
 	}
